Closed
Bug 779818
Opened 13 years ago
Closed 13 years ago
IonMonkey: Assertion failure: false (unexpected constant type), at ion/shared/Lowering-shared.cpp:33
Categories
(Core :: JavaScript Engine, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: decoder, Assigned: nbp)
References
Details
(Keywords: assertion, testcase, Whiteboard: [jsbugmon:update][ion:p1:fx18])
Attachments
(1 file)
2.11 KB,
patch
|
dvander
:
review+
nbp
:
checkin+
|
Details | Diff | Splinter Review |
The following testcase asserts on ionmonkey revision 2169bca0c9a5 (run with --ion -n -m --ion-eager -a):
var SECTION = "lexical-015";
(function() {
for (var a = 0; a < 9; a++) {
if (SECTION[a]) {
while (arguments[a]) break;
}
}
})()
Reporter | ||
Comment 1•13 years ago
|
||
Please also run this test in an optimized build. You'll notice that it just aborts (you'll get "Aborted" but nothing else). I don't think this is the right behavior, even if opt builds are supposed to be stopped at that point.
Assignee | ||
Comment 2•13 years ago
|
||
This is likely the MPhi issue with OSR block found by Marty yesterday.
Assignee: general → nicolas.b.pierron
Status: NEW → ASSIGNED
![]() |
||
Updated•13 years ago
|
Whiteboard: [jsbugmon:update] → [jsbugmon:update][ion:p1:fx18]
Assignee | ||
Comment 4•13 years ago
|
||
Attachment #648616 -
Flags: review?(dvander)
![]() |
||
Updated•13 years ago
|
Attachment #648616 -
Flags: review?(dvander) → review+
Assignee | ||
Comment 5•13 years ago
|
||
Comment on attachment 648616 [details] [diff] [review]
Substitute MPhi of Magic type by the lazy argument constant.
https://hg.mozilla.org/projects/ionmonkey/rev/15db586f9a12
Attachment #648616 -
Flags: checkin+
Reporter | ||
Updated•13 years ago
|
Whiteboard: [jsbugmon:update][ion:p1:fx18] → [ion:p1:fx18] [jsbugmon:update,ignore]
Reporter | ||
Comment 6•13 years ago
|
||
JSBugMon: The testcase found in this bug no longer reproduces (tried revision 15db586f9a12).
Assignee | ||
Updated•13 years ago
|
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Whiteboard: [ion:p1:fx18] [jsbugmon:update,ignore] → [jsbugmon:update][ion:p1:fx18]
Reporter | ||
Comment 7•13 years ago
|
||
Automatically extracted testcase for this bug was committed:
https://hg.mozilla.org/mozilla-central/rev/2e891e0db397
Flags: in-testsuite+
You need to log in
before you can comment on or make changes to this bug.
Description
•