Bug 779818 - Substitute MPhi of Magic type by the lazy argument constant. r=dvander